Fix vertical alignment of message snippet

--- a/sass/components/inbox/message-snippet.sass
+++ b/sass/components/inbox/message-snippet.sass
@@ -27,6 +27,7 @@
     @extend .p-4-r
 
   .link
+    @extend .align-items-baseline
     @extend .cursor-pointer
     @extend .decoration-none
     @extend .ellipsis
@@ -39,6 +40,7 @@
       @extend .m-2-y
 
     .sender
+      @extend .align-items-baseline
       @extend .ellipsis
       @extend .p-4-r
       @extend .text-left
@@ -46,6 +48,7 @@
       width: 150px
 
     .message
+      @extend .align-items-baseline
       @extend .flex
       @extend .justify-start
       @extend .overflow-hidden
